samples/_failures_safe/1761071237_ef4803_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c55f4ec7.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_c55f4ec7.c:183:9: error: expected expression at end of input
  183 |         if (
      |         ^~
./samples/SAFE/__tmp_c55f4ec7.c:183:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c55f4ec7.c:183:9: error: expected declaration or statement at end of input
